# lesdarons

./: .gitignore  README.md  contributors.txt
OS2/IPC/: MemorySimulation.c  Sorter.c
OS2/IPC/OS/: MainMemory  MainMemory.c  Makefile  MemorySimulation  MemorySimulation.c  Sorter  Sorter.c  VirtualMemory  VirtualMemory.c
SINF2/pizzaorders/: pom.xml
SINF2/pizzaorders/pizzaorders-frontend/: pom.xml
SINF2/pizzaorders/pizzaorders-frontend/src/main/webapp/: index.html  main.js
SINF2/pizzaorders/pizzaorders-webservice/: pom.xml
SINF2/pizzaorders/pizzaorders-webservice/src/main/resources/: hibernate.cfg.xml
SINF2/pizzaorders/pizzaorders-webservice/src/main/webapp/: index.html
SINF2/pizzaorders/pizzaorders-webservice/src/main/webapp/WEB-INF/: pizzas.xml  (+1 more)
SINF2/pizzaorders/rapport/: .gitignore  backend.tex  conception.tex  conclusion.tex  frontend.tex  intro.tex  maven.tex  organisation.tex  production.tex  rapport.tex  validation.tex
TAP3/Projet/gtest-1.7.0/: Makefile  cmake_install.cmake
TAP3/Projet/src/: .gitignore  AdvicedPlayer.cpp  AdvicedPlayer.hpp  Awele.cpp  Awele.hpp  CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.hpp  Debug.hpp  Game.cpp  Game.hpp  HumanPlayer.cpp  HumanPlayer.hpp  Makefile  Nim.cpp  Nim.hpp  Player.cpp  Player.hpp  README.txt  README_Linux  README_Tests  README_Windows.txt  awele_test.cpp  main.cpp
algogen/src/algogen/: AlgoGenUtils.java  BallDataFile.java  FeedForwardNNTrainAndEvaluateMain.java  NNEvaluateMain.java  Neuron.java  PatternCallback.java  TrainBallFeedForwardNeuralNetworkMain.java  TrainBallSingleNeuronMain.java
(+28 files in other folders)
